<resources>
    <string name="app_name">ArgosApp</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="accueil">HOME</string>
    <string name="connexion">CONNEXION</string>
    <string name="deconnexion">DECONNEXION</string>
    <string name="mesrobots">MY ROBOTS</string>

    <string name="connexion_maj">CONNEXION</string>
    <string name="monprofil_maj">MY PROFIL</string>
    <string name="mesrobots_maj">MY ROBOTS</string>
    <string name="addrobot_maj">ADD ROBOT</string>
    <string name="inscription_maj">INSCRIPTION</string>
    <string name="characteristic_maj">CHARACTERISTIC</string>

    <string name="motdepasse">Mot de passe</string>
    <string name="login">Login</string>
    <string name="motdepasseoublie">Mot de passe oublié ?</string>
    <string name="misncrire">M\'inscrire</string>
    <string name="meconnecter">Connexion</string>
    <string name="add_robot">Ajouter un robot</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="nbcapteurs">Nombre de capteurs</string>

    <string name="email">Email</string>
    <string name="cellphone">Cellphone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_connexion">ConnexionActivity</string>

    <string name="retour">Retour</string>
    <string name="mdp_or_login_incorrect">Le mot de passe ou le login est incorrect. Veuillez réessayez.</string>
    <string name="erreur">Erreur</string>
    <string name="robot_eteint">Votre robot est éteint</string>
    <string name="attention">Attention</string>




    <string name="firebase_cloud_messaging_token">firebase_cloud_messaging_token</string>
    <string name="user_id">user_id</string>

    <string name="title_notification">"Attention</string>
    <string name="body_notification">Votre robot a détecté quelque chose</string>
    <string name="msg_token_fmt">Token retrieved and sent to server!</string>
    <string name="no_url_robot">Votre robot n\'est relié à aucune caméra</string>
</resources>
