<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity"
    android:background="@color/darkGray"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/close_inscription"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:padding="12dp"
        android:scaleType="fitCenter"
        android:tint="@color/white"
        android:src="@drawable/close_black" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription_maj"
            android:layout_marginTop="30sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"/>

        <LinearLayout
            android:id="@+id/formulaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:background="@drawable/background_edit_text">

            <EditText
                android:id="@+id/user_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="@dimen/liseret"
                android:background="@color/darkGray"/>

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/motdepasse"
                android:inputType="textPassword" />
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="@dimen/liseret"
                android:background="@color/darkGray"/>

            <EditText
                android:id="@+id/user_cellphone"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/cellphone"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="@dimen/liseret"
                android:background="@color/darkGray"/>

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_inscription"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/formulaire"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_background"
            android:layout_gravity="center_horizontal"
            android:text="@string/misncrire"
            android:textColor="@android:color/white"/>



</RelativeLayout>