<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    tools:context="app.argos.com.argosapp.ConnexionActivity">

    <RelativeLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:tint="@color/white"
            android:src="@drawable/close_black" />

        <TextView
            android:id="@+id/text_fact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/connexion_maj" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btn_inscription"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="@string/misncrire"
            android:textColor="@color/white"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/background_edit_text">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress" />
            
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="@dimen/liseret"
                android:background="@color/darkGray"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:hint="@string/motdepasse"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_connexion"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_button"
            android:layout_gravity="center_horizontal"
            android:text="@string/meconnecter"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <include layout="@layout/loading_indicator" />

</RelativeLayout>